FF-913 #time 1h 15m  bug fix: updated the view_lots,clone_auction and list code Updated the API documentation for list auctions, and list code, now recieve total auctions count as well, Handled missing field exception for import lots.
